--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             }
 
             img {
-                max-width: 75%;
+                max-width: 85%;
             }
 
             main {
@@ -101,7 +101,7 @@
                 padding-bottom: .2rem;
 
                 /* Typo */
-                color: #67B26F;
+                color: #3D5368;
                 text-decoration: none;
 
                 /* Visual */
@@ -110,7 +110,7 @@
             }
 
             a:hover {
-                border-bottom-color: #67B26F;
+                border-bottom-color: #3D5368;
             }
 
             ul {
@@ -150,12 +150,19 @@
 				<h2>Page pour le changement d'hébergeur</h2>
 			</header>
 		<hr>
-		<h3>Etape 1</h3>
+		<h3>12 mars 2020 : xxx</h3>
 		<p></p>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non velit eu elit sagittis egestas vitae pretium lorem. Integer eu nisl eu mauris hendrerit sodales ut sit amet elit. Suspendisse potenti. Praesent nec enim dignissim, consectetur massa in, tristique risus. Fusce in efficitur neque. Integer lobortis mollis pellentesque. Praesent imperdiet consectetur augue at commodo. In volutpat non lectus at tristique. Vivamus tempor turpis sit amet tempus porttitor. Mauris finibus ipsum elementum scelerisque efficitur. Nullam eros erat, feugiat ac ante a, aliquet dapibus risus.
 		</p>
 		<hr>
+		<h3>11 mars 2020 : xxx</h3>
+		<p></p>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non velit eu elit sagittis egestas vitae pretium lorem. Integer eu nisl eu mauris hendrerit sodales ut sit amet elit. Suspendisse potenti. Praesent nec enim dignissim, consectetur massa in, tristique risus. Fusce in efficitur neque. Integer lobortis mollis pellentesque. Praesent imperdiet consectetur augue at commodo. In volutpat non lectus at tristique. Vivamus tempor turpis sit amet tempus porttitor. Mauris finibus ipsum elementum scelerisque efficitur. Nullam eros erat, feugiat ac ante a, aliquet dapibus risus.
+		</p>
+		<hr>
+		
 				<footer>
 				<ul>
 					<li>
@@ -172,5 +179,6 @@
 				</footer>
 		</section>
 		</main>		
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">		
     </body>
 </html>
