page attente migration

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<section>
 			<header>
 				<h2>Page pour le changement d'hébergeur</h2>
-				<p> Cette page a pour but de vous renseigner sur l'état d'avancement de la migration de la plateforme GéoBretagne à venir.</p>
+				<p> Cette page a pour but de vous renseigner sur l'état d'avancement de la migration de la plateforme GéoBretagne à venir. Plus de détails prochainement.</p>
 			</header>		
 				<footer>
 				<ul>
