--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 			<header>
 				<h2>Etat d'avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">0%</div>
+			<div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">1%</div>
 		</div>
 			</header>
 		<hr>
-		<h3 class="bleu">mardi 10 mars 2020 | étape 1 : début de la migration</h3>
+		<h3 class="bleu">mardi 10 mars 2020 | étape 1 : livraison des machines</h3>
 		<p></p>
 		<p>
 			Les machines ont été livrées par le SIB. La migration débute demain, mercredi 11 mars.
