--- a/index.html
+++ b/index.html
@@ -173,14 +173,16 @@
 			<header>
 				<h2>Etat d'avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">0%</div>
+			<div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">5%</div>
 		</div>
 			</header>
 		<hr>
-		<h3 class="bleu">mardi 10 mars 2020 | étape 1 : livraison des machines</h3>
-		<p>
-			Les machines ont été livrées par le SIB. La migration débute demain, mercredi 11 mars.
-		</p>
+		<h3 class="bleu">19 mars 2020 | étape 2 : début de la migration</h3>
+		<p></p>
+		<p>Le déploiement sur le nouveau serveur a débuté par le transfert des 6 To de données (photos aériennes, Openstreetmap, raster, données des partenaires).</p>
+		<hr>		
+		<h3>mardi 10 mars 2020 | étape 1 : livraison des machines</h3>
+		<p>Les machines nues ont été livrées par le SIB.</p>
 		<hr>
 		
 				<footer>
