--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GéoBretagne - migration d'hébergement</title>
+        <title>G&eacute;oBretagne - migration d&#039;h&eacute;bergement</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
@@ -26,7 +26,7 @@
 
             body {
                 /* Typo */
-                font-family: 'Lato', sans-serif;
+                font-family: &#039;Rokkitt&#039;, sans-serif;
                 color: #555;
             }
 
@@ -64,17 +64,21 @@
 
             h2 {
                 font-size: 2rem;
-                font-weight: 400;
+				font-weight: bold;
             }
+            h3 {
+                font-size: 1.4rem;
+				font-weight: bold;				
+            }			
 
             hr {
                 /* Box model */
-                width: 6rem;
+                width: 10rem;
                 margin: 3rem 0;
 
                 /* Visual */
                 border: none;
-                border-bottom: 1px solid #ddd;
+                border-bottom: 2px solid #ddd;
             }
 
             p, ul {
@@ -117,7 +121,7 @@
 				border-radius: .25rem;
 			}
             strong {
-                font-weight: 400;
+                font-weight: bold;
             }
 
             a, a:visited {
@@ -154,7 +158,7 @@
 
             li:not(:last-child):after {
                 /* Box model */
-                content: '•';
+                content: &#039;•&#039;;
                 padding-left: .8rem;
 
                 /* Typo */
@@ -166,23 +170,33 @@
     <body>
         <header>
 		<img src="https://framapic.org/2PlzhqMfvatA/lZwEQctosjiW.png" alt="geobretagne.bzh">
-		<h1>Migration de la plateforme sur un nouvel hébergeur</h1>
+		<h1>Migration de la plateforme sur un nouvel h&eacute;bergeur</h1>
 		</header>
 		<main>
 		<section>
 			<header>
-				<h2>Etat d'avancement de la migration :</h2>
+				<h2>Etat d&#039;avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">5%</div>
+			<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">10%</div>
 		</div>
 			</header>
 		<hr>
-		<h3 class="bleu">19 mars 2020 | étape 2 : début de la migration</h3>
+		<h3 class="bleu">jeudi 16 avril 2020 | &eacute;tape 3 : suspension des mises à jour</h3>
 		<p></p>
-		<p>Le déploiement sur le nouveau serveur a débuté par le transfert des 6 To de données (photos aériennes, Openstreetmap, raster, données des partenaires).</p>
+		<p>
+			Une migration en l&#039;&eacute;tat des donn&eacute;es de G&eacute;oBretagne sera lanc&eacute;e à partir du 17 avril.</br><strong>Les modifications r&eacute;alis&eacute;es - c&#039;est-à-dire donn&eacute;ees, m&eacute;tadonn&eacute;es, fichiers, comptes, ... - entre le vendredi 17 (16h) et le lundi 27 avril (8h)</strong> ne seront pas automatiquement r&eacute;percut&eacute;es sur la nouvelle plateforme. 
+			Merci aux partenaires de ne pas effectuer de modifications (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...) dans ce laps de temps.</br> Si des modifications doivent toutefois &ecirc;tre effectu&eacute;es, elles devront &ecirc;tre signal&eacute;es et reproduites à l&#039;issue de la migration auprès de votre administrat&#8226;eur&#8226;rice.
+		</p>
+		<hr>
+		<h3>jeudi 12 mars 2020 | &eacute;tape 2 : d&eacute;but de la migration</h3>
+		<p></p>
+		<p>Le d&eacute;ploiement sur le nouveau serveur a d&eacute;but&eacute; par le transfert des 6 To de donn&eacute;es (photos a&eacute;riennes, Openstreetmap, raster, donn&eacute;es des partenaires).
+		</p>
 		<hr>		
-		<h3>mardi 10 mars 2020 | étape 1 : livraison des machines</h3>
-		<p>Les machines nues ont été livrées par le SIB.</p>
+		<h3>mardi 10 mars 2020 | &eacute;tape 1 : livraison des machines</h3>
+		<p>
+			Les machines ont &eacute;t&eacute; livr&eacute;es par le SIB. La migration d&eacute;bute demain, mercredi 11 mars.
+		</p>
 		<hr>
 		
 				<footer>
@@ -198,14 +212,14 @@
 					</a>
 					</li>
 					<li>
-					<a href="https:/geobretagne.bzg" title="GéoBretagne">
-					GéoBretagne
+					<a href="https:/geobretagne.bzg" title="G&eacute;oBretagne">
+					G&eacute;oBretagne
 					</a>
 					</li>
 					</ul>
 				</footer>
 		</section>
 		</main>		
-		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">		
+		<link href="https://fonts.googleapis.com/css2?family=Rokkitt:300,400" rel="stylesheet">		
     </body>
 </html>
