--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             body {
                 /* Typo */
-                font-family: &#039;Rokkitt&#039;, sans-serif;
+                font-family:'Rokkitt';, sans-serif;
                 color: #555;
             }
 
