--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>G&eacute;oBretagne - migration d&#039;h&eacute;bergement</title>
+        <title>G&eacute;oBretagne - migration d'h&eacute;bergement</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
@@ -158,7 +158,7 @@
 
             li:not(:last-child):after {
                 /* Box model */
-                content: &#039;•&#039;;
+                content: '•';
                 padding-left: .8rem;
 
                 /* Typo */
@@ -175,7 +175,7 @@
 		<main>
 		<section>
 			<header>
-				<h2>Etat d&#039;avancement de la migration :</h2>
+				<h2>Etat d'avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
 			<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">10%</div>
 		</div>
@@ -184,8 +184,8 @@
 		<h3 class="bleu">jeudi 16 avril 2020 | &eacute;tape 3 : suspension des mises à jour</h3>
 		<p></p>
 		<p>
-			Une migration en l&#039;&eacute;tat des donn&eacute;es de G&eacute;oBretagne sera lanc&eacute;e à partir du 17 avril.</br><strong>Les modifications r&eacute;alis&eacute;es - c&#039;est-à-dire donn&eacute;ees, m&eacute;tadonn&eacute;es, fichiers, comptes, ... - entre le vendredi 17 (16h) et le lundi 27 avril (8h)</strong> ne seront pas automatiquement r&eacute;percut&eacute;es sur la nouvelle plateforme. 
-			Merci aux partenaires de ne pas effectuer de modifications (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...) dans ce laps de temps.</br> Si des modifications doivent toutefois &ecirc;tre effectu&eacute;es, elles devront &ecirc;tre signal&eacute;es et reproduites à l&#039;issue de la migration auprès de votre administrat&#8226;eur&#8226;rice.
+			Une migration en l'&eacute;tat des donn&eacute;es de G&eacute;oBretagne sera lanc&eacute;e à partir du 17 avril.</br><strong>Les modifications r&eacute;alis&eacute;es - c'est-à-dire donn&eacute;ees, m&eacute;tadonn&eacute;es, fichiers, comptes, ... - entre le vendredi 17 (16h) et le lundi 27 avril (8h)</strong> ne seront pas automatiquement r&eacute;percut&eacute;es sur la nouvelle plateforme. 
+			Merci aux partenaires de ne pas effectuer de modifications (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...) dans ce laps de temps.</br> Si des modifications doivent toutefois &ecirc;tre effectu&eacute;es, elles devront &ecirc;tre signal&eacute;es et reproduites à l'issue de la migration auprès de votre administrat&#8226;eur&#8226;rice.
 		</p>
 		<hr>
 		<h3>jeudi 12 mars 2020 | &eacute;tape 2 : d&eacute;but de la migration</h3>
