--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					</a>
 					</li>
 					<li>
-					<a href="https:/geobretagne.bzg" title="G&eacute;oBretagne">
+					<a href="https:/geobretagne.bzh" title="G&eacute;oBretagne">
 					G&eacute;oBretagne
 					</a>
 					</li>
