--- a/index.html
+++ b/index.html
@@ -177,19 +177,24 @@
 			<header>
 				<h2>Etat d&#039;avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">30%</div>
+			<div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">70%</div>
 		</div>
 			</header>
 		<hr>
-		<h3 class="bleu">lundi 27 avril 2020 | &eacute;tape 3 (suite) : suspension des mises à jour</h3>
+		<h3 class="bleu">lundi 4 mai 2020 | &eacute;tape 4 : migration réalisée et maintien des suspensions des mises à jour</h3>
+		<p></p>
+		<p>La plateforme a été migrée avec succès le week-end dernier. Nous entamons la phase de contrôle de l'ensemble des services.</br>
+		Des ralentissements sur les services de tuiles des photo-aériennes (WMTS) sont visibles et vont perdurer dans les prochains jours : le cache (2To) doit être régénéré sur le nouvel hébergement. Nous allons mettre en oeuvre une redirection temporaire vers les flux du géoportail.</p>
+		<p><i><strong>Attention</strong></i> : le gel des mises à jour (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...)  est prolongé jusqu'au lundi 11 mai.</p>
+		<hr>
+		<h3>lundi 27 avril 2020 | &eacute;tape 3 (suite) : suspension des mises à jour</h3>
 		<p></p>
 		<p>Le gel des mises à jour est prolongé jusqu'au lundi 11 mai afin de finaliser la migration.</p>
 		<hr>
 		<h3>jeudi 16 avril 2020 | &eacute;tape 3 : suspension des mises à jour</h3>
 		<p></p>
-		<p>
-			Une migration en l&#039;&eacute;tat des donn&eacute;es de G&eacute;oBretagne sera lanc&eacute;e à partir du 17 avril.</br><strong>Les modifications r&eacute;alis&eacute;es - c&#039;est-à-dire donn&eacute;ees, m&eacute;tadonn&eacute;es, fichiers, comptes, ... - entre le vendredi 17 (16h) et le lundi <span style="text-decoration:line-through;">27 avril (8h)</span></strong> ne seront pas automatiquement r&eacute;percut&eacute;es sur la nouvelle plateforme. 
-			Merci aux partenaires de ne pas effectuer de modifications (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...) dans ce laps de temps.</br> Si des modifications doivent toutefois &ecirc;tre effectu&eacute;es, elles devront &ecirc;tre signal&eacute;es et reproduites à l&#039;issue de la migration auprès de votre administrat&#8226;eur&#8226;rice.
+		<p>Une migration en l&#039;&eacute;tat des donn&eacute;es de G&eacute;oBretagne sera lanc&eacute;e à partir du 17 avril.</br><strong>Les modifications r&eacute;alis&eacute;es - c&#039;est-à-dire donn&eacute;ees, m&eacute;tadonn&eacute;es, fichiers, comptes, ... - entre le vendredi 17 (16h) et le lundi <span style="text-decoration:line-through;">27 avril (8h)</span></strong> ne seront pas automatiquement r&eacute;percut&eacute;es sur la nouvelle plateforme. 
+		Merci aux partenaires de ne pas effectuer de modifications (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...) dans ce laps de temps.</br> Si des modifications doivent toutefois &ecirc;tre effectu&eacute;es, elles devront &ecirc;tre signal&eacute;es et reproduites à l&#039;issue de la migration auprès de votre administrat&#8226;eur&#8226;rice.
 		</p>
 		<hr>
 		<h3>jeudi 12 mars 2020 | &eacute;tape 2 : d&eacute;but de la migration</h3>
