--- a/index.html
+++ b/index.html
@@ -177,9 +177,27 @@
 			<header>
 				<h2>Etat d&#039;avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">70%</div>
+			<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">80%</div>
 		</div>
 			</header>
+		<hr>
+		<h3 class="bleu">mardi 12 mai 2020 | &eacute;tape 5 : recettage et prolongation du gel des mises à jour</h3>
+		<p></p>
+		<p>Nous entamons la phase de contrôle de l'ensemble des services.</p>
+		<ul>Les services suivants sont opérationnels :</br>
+			<li>+ les services de diffusion des données (WMS) et de tuiles (WMTS)</li>
+			<li>+ le site éditorial (<a href="https://cms.geobretagne.fr/" target="_blank" title="cms">cms.geobretagne.fr</a>)</li>			
+			<li>+ le catalogue de métadonnées (<a href="https://geobretagne.fr/geonetwork/" target="_blank" title="geonetwork">geonetwork</a>) : consultation, modification, création de métadonnée</li>
+			<li>+ le dépôt de fichiers (<a href="https://geobretagne.fr/explorer/" target="_blank" title="pydio">pydio</a>) : dépôt, mise à jour, modification</li>
+			<li>+ les visualiseurs simple (<a href="https://geobretagne.fr/signalement/" target="_blank" title="sviewer">sviewer</a>), thématique (mviewer) et avancé (<a href="https://geobretagne.fr/mapfishapp/" target="_blank" title="mapfishapp">mapfishapp</a>)</li>
+			<li>+ les applications (<a href="https://geobretagne.fr/signalement/" target="_blank" title="Sign'adresse">Sign'adresse</a>, ...)</li>
+		</ul>
+		<ul>Les services restant à déployer :</br>
+			<li>- mviewer studio pour la création d'applications pour les partenaires</li>
+			<li>- <span style="text-decoration:line-through;">la consultation du cadastre assemblé</span></li>
+			<li>- les services de traitements des données (WPS) : profil en long, bassin versant </li>
+		</ul>
+		<p><i><strong>Attention</strong></i> : le gel des mises à jour (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...)  est prolongé jusqu'au lundi 18 mai.</p>	
 		<hr>
 		<h3 class="bleu">lundi 4 mai 2020 | &eacute;tape 4 : migration réalisée et maintien des suspensions des mises à jour</h3>
 		<p></p>
@@ -210,22 +228,10 @@
 		
 				<footer>
 				<ul>
-					<li>
-					<a href="https://github.com/geobretagne/" title="Github">
-					Github
-					</a>
-					</li>
-					<li>
-					<a href="https://twitter.com/geobretagne" title="Twitter">
-					Twitter
-					</a>
-					</li>
-					<li>
-					<a href="https:/geobretagne.bzg" title="G&eacute;oBretagne">
-					G&eacute;oBretagne
-					</a>
-					</li>
-					</ul>
+					<li><a href="https://github.com/geobretagne/" target="_blank" title="Github">Github</a></li>
+					<li><a href="https://twitter.com/geobretagne" target="_blank" title="Twitter">Twitter</a></li>
+					<li><a href="https:/geobretagne.bzg" target="_blank" title="G&eacute;oBretagne">G&eacute;oBretagne</a></li>
+				</ul>
 				</footer>
 		</section>
 		</main>		
