--- a/index.html
+++ b/index.html
@@ -177,9 +177,25 @@
 			<header>
 				<h2>Etat d&#039;avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">80%</div>
+			<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">95%</div>
 		</div>
 			</header>
+		<hr>
+		<h3 class="bleu">lundi 18 mai 2020 | &eacute;tape 6 : recettage et reprise des mises à jour</h3>
+		<p></p>
+		<p>Nous avons entamé la phase de recettage de l'ensemble des services. Les partenaires peuvent désormais reprendre les mises à jours : création/modification de métadonnée, publication de couches sur pydio, modification de style sur GeoServer, création de comptes...</p>
+		<ul>Les services suivants sont opérationnels :</br>
+			<li>+ les services de diffusion des données (WMS) et de tuiles (WMTS)</li>
+			<li>+ le site éditorial (<a href="https://cms.geobretagne.fr/" target="_blank" title="cms">cms.geobretagne.fr</a>)</li>			
+			<li>+ le catalogue de métadonnées (<a href="https://geobretagne.fr/geonetwork/" target="_blank" title="geonetwork">geonetwork</a>) : consultation, modification, création de métadonnée</li>
+			<li>+ le dépôt de fichiers (<a href="https://geobretagne.fr/explorer/" target="_blank" title="pydio">pydio</a>) : dépôt, mise à jour, modification</li>
+			<li>+ les visualiseurs simple (<a href="https://geobretagne.fr/signalement/" target="_blank" title="sviewer">sviewer</a>), thématique (mviewer) et avancé (<a href="https://geobretagne.fr/mapfishapp/" target="_blank" title="mapfishapp">mapfishapp</a>)</li>
+			<li>+ les applications (<a href="https://geobretagne.fr/signalement/" target="_blank" title="Sign'adresse">Sign'adresse</a>, ...)</li>
+		</ul>
+		<ul>Les services restant à déployer :</br>
+			<li>- mviewer studio pour la création d'applications pour les partenaires</li>
+			<li>- les services de traitements des données (WPS) : profil en long, bassin versant </li>
+		</ul>
 		<hr>
 		<h3 class="bleu">mardi 12 mai 2020 | &eacute;tape 5 : recettage et prolongation du gel des mises à jour</h3>
 		<p></p>
