fin de la migration

--- a/index.html
+++ b/index.html
@@ -177,11 +177,13 @@
 			<header>
 				<h2>Etat d&#039;avancement de la migration :</h2>
 			<div class="progress" style="height: 30px;">
-			<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">95%</div>
+			<div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">100%</div>
 		</div>
 			</header>
 		<hr>
-		<h3 class="bleu">lundi 18 mai 2020 | &eacute;tape 6 : recettage et reprise des mises à jour</h3>
+		<h3 class="bleu">lundi 25 mai 2020 | &eacute;tape 7 : migration achevée</h3>
+		<hr>
+		<h3>lundi 18 mai 2020 | &eacute;tape 6 : recettage et reprise des mises à jour</h3>
 		<p></p>
 		<p>Nous avons entamé la phase de recettage de l'ensemble des services. Les partenaires peuvent désormais reprendre les mises à jours : création/modification de métadonnée, publication de couches sur pydio, modification de style sur GeoServer, création de comptes...</p>
 		<ul>Les services suivants sont opérationnels :</br>
@@ -197,7 +199,7 @@
 			<li>- les services de traitements des données (WPS) : profil en long, bassin versant </li>
 		</ul>
 		<hr>
-		<h3 class="bleu">mardi 12 mai 2020 | &eacute;tape 5 : recettage et prolongation du gel des mises à jour</h3>
+		<h3>mardi 12 mai 2020 | &eacute;tape 5 : recettage et prolongation du gel des mises à jour</h3>
 		<p></p>
 		<p>Nous entamons la phase de contrôle de l'ensemble des services.</p>
 		<ul>Les services suivants sont opérationnels :</br>
@@ -215,7 +217,7 @@
 		</ul>
 		<p><i><strong>Attention</strong></i> : le gel des mises à jour (cr&eacute;ation/modification de m&eacute;tadonn&eacute;e, publication de couches, modification de style sur GeoServer, cr&eacute;ation de comptes...)  est prolongé jusqu'au lundi 18 mai.</p>	
 		<hr>
-		<h3 class="bleu">lundi 4 mai 2020 | &eacute;tape 4 : migration réalisée et maintien des suspensions des mises à jour</h3>
+		<h3>lundi 4 mai 2020 | &eacute;tape 4 : migration réalisée et maintien des suspensions des mises à jour</h3>
 		<p></p>
 		<p>La plateforme a été migrée avec succès le week-end dernier. Nous entamons la phase de contrôle de l'ensemble des services.</br>
 		Des ralentissements sur les services de tuiles des photo-aériennes (WMTS) sont visibles et vont perdurer dans les prochains jours : le cache (2To) doit être régénéré sur le nouvel hébergement. Nous allons mettre en oeuvre une redirection temporaire vers les flux du géoportail.</p>
